fix: Do not remove single quotes from values in rule variables [DHIS2-13275]