@@ -22,57 +22,22 @@ public abstract class RuleVariableValue implements VariableValue
     @Nonnull
     public static RuleVariableValue create( @Nonnull RuleValueType ruleValueType )
     {
-        return new AutoValue_RuleVariableValue( null, ruleValueType,
-            Collections.unmodifiableList( new ArrayList<String>() ), getFormattedDate( new Date() ) );
+        return new AutoValue_RuleVariableValue( null, ruleValueType, List.of(), getFormattedDate( new Date() ) );
     }
 
     @Nonnull
     public static RuleVariableValue create( @Nonnull String value,
         @Nonnull RuleValueType ruleValueType )
     {
-        if ( ruleValueType == null )
-        {
-            throw new IllegalArgumentException( "Invalid value type" );
-        }
-        // clean-up the value before processing it
-        String processedValue = value == null ? null : value.replace( "'", "" );
-
-        // if text processedValue, wrap it
-        if ( RuleValueType.TEXT.equals( ruleValueType ) )
-        {
-            processedValue = String.format( Locale.US, "%s", processedValue );
-        }
-
-        /*if (RuleValueType.NUMERIC.equals(ruleValueType)) {TODO: UNCOMMENT WHEN VALUE FORMAT IN CLIENT IS READY
-            processedValue = getFormattedNumber(value);
-        }*/
-
-        return new AutoValue_RuleVariableValue( processedValue, ruleValueType,
-            Collections.unmodifiableList( new ArrayList<String>() ), getFormattedDate( new Date() ) );
+        return new AutoValue_RuleVariableValue( value, ruleValueType,
+            List.of(), getFormattedDate( new Date() ) );
     }
 
     @Nonnull
     public static RuleVariableValue create( @Nonnull String value,
         @Nonnull RuleValueType ruleValueType, @Nonnull List<String> candidates, @Nonnull String eventDate )
     {
-        if ( candidates == null )
-        {
-            throw new IllegalArgumentException( "Candidate cannot be null" );
-        }
-        // clean-up the value before processing it
-        String processedValue = value.replace( "'", "" );
-
-        // if text processedValue, wrap it
-        if ( RuleValueType.TEXT.equals( ruleValueType ) )
-        {
-            processedValue = String.format( Locale.US, "%s", processedValue );
-        }
-
-       /* if (RuleValueType.NUMERIC.equals(ruleValueType)) {TODO: UNCOMMENT WHEN VALUE FORMAT IN CLIENT IS READY
-            processedValue = getFormattedNumber(value);
-        }*/
-
-        return new AutoValue_RuleVariableValue( processedValue, ruleValueType,
+        return new AutoValue_RuleVariableValue( value, ruleValueType,
             Collections.unmodifiableList( candidates ), eventDate );
     }
 
@@ -82,13 +47,6 @@ public abstract class RuleVariableValue implements VariableValue
         format.applyPattern( DATE_PATTERN );
 
         return format.format( date );
-    }
-
-    private static String getFormattedNumber( String number )
-    {
-        DecimalFormatSymbols otherSymbols = new DecimalFormatSymbols( Locale.US );
-        otherSymbols.setDecimalSeparator( '.' );
-        return new DecimalFormat( NUMBER_PATTERN, otherSymbols ).format( Float.valueOf( number ) );
     }
 
     @Nullable
